Ingreso mensaje footer

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -32,7 +32,7 @@
       </nav>
 
       
-      <footer class="text-center " > Luis Flores | Iván Mieres | Nelson Toledo | Rebeca Gatica
+      <footer class="text-center " > Luis Flores | Iván Mieres | Víctor Rivas | Héctor Komori
         <br>   2023
       </footer>
       
