--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -61,8 +61,7 @@
         </div>
       </div>
 
-      <footer class="text-center " > Luis Flores | Iván Mieres | Nelson Toledo | Rebeca Gatica
-        <br>   2023
+      <footer class="text-center " > Luis Flores | Iván Mieres | Víctor Rivas | Héctor Komori        <br>   2023
     </footer>
       
 
