--- a/contacto.html
+++ b/contacto.html
@@ -54,8 +54,7 @@
         <p align="center"> Nuestra sala de venta se encuentra en <b> AV. BLANCA ESTELA 1086, CONCON</b></p><br>
 
 
-      <footer class="text-center " > Luis Flores | Iván Mieres | Nelson Toledo | Rebeca Gatica
-        <br>   2023
+        <footer class="text-center " > Luis Flores | Iván Mieres | Víctor Rivas | Héctor Komori        <br>   2023
       </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
