mi colaboracion menus

--- a/contacto.html
+++ b/contacto.html
@@ -26,6 +26,9 @@
               <li class="nav-item">
                 <a class="nav-link active  text-light" aria-current="page" href="contacto.html">Contacto</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active  text-light" aria-current="page" href="estadisticas.html">Estadísticas</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -54,7 +57,7 @@
         <p align="center"> Nuestra sala de venta se encuentra en <b> AV. BLANCA ESTELA 1086, CONCON</b></p><br>
 
 
-      <footer class="text-center " > Luis Flores | Iván Mieres | Nelson Toledo | Rebeca Gatica
+      <footer class="text-center " > Luis Flores | Iván Mieres | Hector Komori | Victor Rivas
         <br>   2023
       </footer>
 
