--- a/estadisticas.html
+++ b/estadisticas.html
@@ -26,13 +26,16 @@
               <li class="nav-item">
                 <a class="nav-link active  text-light" aria-current="page" href="contacto.html">Contacto</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active  text-light" aria-current="page" href="estadisticas.html">Estadísticas</a>
+              </li>
             </ul>
           </div>
         </div>
       </nav>
 
       
-      <footer class="text-center " > Luis Flores | Iván Mieres | Nelson Toledo | Rebeca Gatica
+      <footer class="text-center " > Luis Flores | Iván Mieres | Hector Komori | Victor Rivas
         <br>   2023
       </footer>
       
