--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
               <li class="nav-item">
                 <a class="nav-link active  text-light" aria-current="page" href="contacto.html">Contacto</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active  text-light" aria-current="page" href="estadisticas.html">Estadísticas</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -78,7 +81,7 @@
     </div>
 </div>
 
-<footer class="text-center " > Luis Flores | Iván Mieres | Nelson Toledo | Rebeca Gatica
+<footer class="text-center " > Luis Flores | Iván Mieres | Hector Komori | Victor Rivas
   <br>   2023
 </footer>
 
