--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -26,6 +26,9 @@
               <li class="nav-item">
                 <a class="nav-link active  text-light" aria-current="page" href="contacto.html">Contacto</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active  text-light" aria-current="page" href="estadisticas.html">Estadísticas</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -61,9 +64,9 @@
         </div>
       </div>
 
-      <footer class="text-center " > Luis Flores | Iván Mieres | Nelson Toledo | Rebeca Gatica
+      <footer class="text-center " > Luis Flores | Iván Mieres | Hector Komori | Victor Rivas
         <br>   2023
-    </footer>
+      </footer>
       
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
