--- a/estadisticas.html
+++ b/estadisticas.html
@@ -1,42 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Te lo Vendo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body class="bg-info-subtle ">
-    <nav class="navbar navbar-expand-lg bg-body-tertiar bg-primary p-3 ">
-        <div class="container-fluid ">
-          <a class="navbar-brand" href="index.html">Te lo Vendo</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active  text-light" aria-current="page" href="index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active  text-light" aria-current="page" href="quienes-somos.html">Quiénes Somos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active  text-light" aria-current="page" href="contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
 
-      
-      <footer class="text-center " > Luis Flores | Iván Mieres | Víctor Rivas | Héctor Komori
-        <br>   2023
-      </footer>
-      
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-        <script src = "./scripts/funciones.js"></script>
-      </body>
-      </html>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Te lo Vendo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body class="bg-info-subtle ">
+  <nav class="navbar navbar-expand-lg bg-body-tertiar bg-primary p-3 ">
+    <div class="container-fluid ">
+      <a class="navbar-brand" href="index.html">Te lo Vendo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active  text-light" aria-current="page" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active  text-light" aria-current="page" href="quienes-somos.html">Quiénes Somos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active  text-light" aria-current="page" href="contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <main>
+    <div class="container">
+      <div class="row justify-content-center align-items-center g-2">
+        <table id="tablaProductos" class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th>Id</th>
+              <th>Producto</th>
+              <th>Descripción</th>
+              <th>Valor</th>
+              <th>Cantidad en inventario</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Computadora portátil</td>
+              <td>Intel Core i5, 8GB RAM, 256GB SSD</td>
+              <td>$1,000.00</td>
+              <td>10</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Teléfono inteligente</td>
+              <td>Android 11, 128GB almacenamiento</td>
+              <td>$500.00</td>
+              <td>15</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Tableta</td>
+              <td>iPad Pro, 11 pulgadas, 128GB</td>
+              <td>$800.00</td>
+              <td>8</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>Smartwatch</td>
+              <td>Apple Watch Series 7, GPS, aluminio</td>
+              <td>$400.00</td>
+              <td>20</td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>Audífonos inalámbricos</td>
+              <td>Sony WH-1000XM4, cancelación de ruido</td>
+              <td>$350.00</td>
+              <td>12</td>
+            </tr>
+            <tr>
+              <td>6</td>
+              <td>Altavoz inteligente</td>
+              <td>Amazon Echo Dot (4ta gen), Alexa</td>
+              <td>$50.00</td>
+              <td>30</td>
+            </tr>
+            <tr>
+              <td>7</td>
+              <td>Cámara de acción</td>
+              <td>GoPro HERO9 Black, 5K</td>
+              <td>$400.00</td>
+              <td>18</td>
+            </tr>
+            <tr>
+              <td>8</td>
+              <td>Auriculares con micrófono</td>
+              <td>Jabra Evolve 65, Bluetooth, USB</td>
+              <td>$180.00</td>
+              <td>25</td>
+            </tr>
+            <tr>
+              <td>9</td>
+              <td>Monitor de computadora</td>
+              <td>Dell Ultrasharp U2415, 24 pulgadas, IPS</td>
+              <td>$300.00</td>
+              <td>7</td>
+            </tr>
+            <tr>
+              <td>10</td>
+              <td>Teclado para juegos</td>
+              <td>Logitech G915, inalámbrico, RGB</td>
+              <td>$250.00</td>
+              <td>9</td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
+    </div>
+  </main>
+
+  <footer class="text-center "> Luis Flores | Iván Mieres | Víctor Rivas | Héctor Komori
+    <br> 2023
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+  <script src="./scripts/funciones.js"></script>
+</body>
+
+</html>
