--- a/contacto.html
+++ b/contacto.html
@@ -18,16 +18,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <a class="nav-link active  text-light" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link  text-light" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active  text-light" aria-current="page" href="quienes-somos.html">Quienes Somos</a>
+                <a class="nav-link text-light" aria-current="page" href="quienes-somos.html">Quienes Somos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active  text-light" aria-current="page" href="contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active  text-light" aria-current="page" href="estadisticas.html">Estadísticas</a>
+                <a class="nav-link  text-light" aria-current="page" href="estadisticas.html">Estadísticas</a>
               </li>
             </ul>
           </div>
