--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <a class="nav-link active  text-light" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active  text-light" aria-current="page" href="quienes-somos.html">Quiénes Somos</a>
+                <a class="nav-link  text-light" aria-current="page" href="quienes-somos.html">Quiénes Somos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active  text-light" aria-current="page" href="contacto.html">Contacto</a>
+                <a class="nav-link  text-light" aria-current="page" href="contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active  text-light" aria-current="page" href="estadisticas.html">Estadísticas</a>
+                <a class="nav-link  text-light" aria-current="page" href="estadisticas.html">Estadísticas</a>
               </li>
             </ul>
           </div>
