--- a/estadisticas.html
+++ b/estadisticas.html
@@ -6,9 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Te lo Vendo</title>
+  <!--Invoca CSS de bootstrap 5.3.0 alpha 3-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <!--Invoca estilos personalizados-->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bg-info-subtle ">
@@ -131,7 +133,7 @@
   <footer class="text-center "> Luis Flores | Iván Mieres | Víctor Rivas | Héctor Komori
     <br> 2023
   </footer>
-
+<!--Invoca código JS de bootstrap 5.3.0 alpha3-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
