--- a/estadisticas.html
+++ b/estadisticas.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-info-subtle ">
+<body class="bs-tertiary-color">
+
   <nav class="navbar navbar-expand-lg bg-body-tertiar bg-primary p-3 ">
     <div class="container-fluid ">
       <a class="navbar-brand" href="index.html">Te lo Vendo</a>
@@ -40,6 +41,11 @@
       </div>
     </div>
   </nav>
+
+  <header>
+    <h2 class="text-center">Tabla de estadísticas</h2>
+</header>
+<br>
   <main>
     <div class="container">
       <div class="row justify-content-center align-items-center g-2">
